--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
+    "cordova-sqlite-storage": "^2.0.4",
     "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
@@ -36,5 +37,10 @@
     "ionic": "3.9.1",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
