melhorias na navegação,inclusao de ações para lista de mesas

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "Controle-de-Mesas",
-  "app_id": "",
+  "app_id": "3951cd24",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
