--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
+    "@ionic-native/core": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
+    "@ionic-native/sqlite": "^4.1.0",
     "@ionic-native/status-bar": "3.12.1",
+    "@ionic/app-scripts": "^2.1.4",
     "@ionic/storage": "^2.0.1",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-console": "^1.0.5",
